# applymatic

./: .gitignore  README.md  debug_workday.py  main.py  main_chat.py  pyproject.toml  requirements.txt  setup_preferences.py
agents/: agent1_discovery.py  agent2_tailor.py  agent3_apply.py
ats_adapters/: generic.py  greenhouse.py  lever.py  workday.py
core/: models.py  profile.py  recommendations.py  resume_parser.py  tracker.py
